# OpenGL-Engine

./: .gitignore  CMakeLists.txt  README.md  imgui.ini
assets/objects/: BrickWall.mtl  monkey.mtl
assets/objects/sponza-scene/source/sponza/: sponza.mtl
include/: app.hpp  camera.hpp  errorhandler.hpp  gui.hpp  lightsettings.hpp  mesh.hpp  model.hpp  openglcontext.hpp  sdlinitializer.hpp  shader.hpp  window.hpp
lib/glad/: CMakeLists.txt  glad.h
lib/imgui/: CMakeLists.txt
lib/imgui/backends/: imgui_impl_opengl3.cpp  imgui_impl_opengl3.h
shaders/: fbo.fragment.glsl  fbo.vertex.glsl  fragment.glsl  geometry.glsl  light.fragment.glsl  light.geo.glsl  light.vertex.glsl
src/: CMakeLists.txt  app.cpp  camera.cpp  camera.hpp  errorhandler.cpp  glad.c  glad.h  gui.cpp  main.cpp  mesh.cpp  model.cpp  openglcontext.cpp  sdlinitializer.cpp  shader.cpp  window.cpp
src/content/objects/: VerticalBrickWall.mtl
src/content/objects/container/: container.mtl
src/includes/camera/: camera.cpp  camera.hpp
src/includes/glad/: glad.c
src/includes/gui/: gui.cpp  gui.hpp
src/includes/imgui/backends/: imgui_impl_sdl2.cpp  imgui_impl_sdl2.h
src/includes/importModel/: mesh.hpp  model.cpp  model.hpp
src/includes/light/: light.hpp  lightsettings.hpp
src/includes/shader/: shader.cpp  shader.hpp
src/includes/shader/shaders/: fbo.fragment.glsl  fbo.geo.glsl  fbo.vertex.glsl  fragment.glsl  geometry.glsl  light.fragment.glsl  light.geo.glsl  light.vertex.glsl  vertex.glsl
src/includes/window/: window.hpp
src/shaders/: fragment.glsl  vertex.glsl
